# HSLinkNexus

./: .prettierignore  .prettierrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build_dev.yml  publish.yml
scripts/: download-assets.js  update-version.js
src/: App.vue  index.css  main.ts  router.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: copy_file.rs  hslink_backend.rs  lib.rs  main.rs  usb_hotplug.rs
src-tauri/src/find_bl/: find_bl_linux.rs  find_bl_macos.rs  find_bl_win.rs  mod.rs
src/assets/fonts/: flag-emoji.css
src/backend/: copy_file.ts  find_bl.ts  hslink_backend.ts
src/components/: DeviceInfo.vue  Navbar.vue
src/locales/: en.json  index.ts  zh.json
src/pages/: About.vue  DeviceSetting.vue  DeviceUpgrade.vue  Flash.vue  Home.vue  Setting.vue
src/stores/: deviceStore.ts  userStore.ts
src/utils/: crc32.ts
