[package]
name = "hslinknexus"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hslinknexus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
lazy_static = "1.5.0"
thiserror = "2.0.10"
probe-rs = "0.27.0"
winapi = { version = "0.3.9", features = ["fileapi", "winbase", "winnt"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
nusb = "0.2"
futures-lite = "2"

[target.'cfg(target_os = "linux")'.dependencies.hidapi]
version = "2"
features = ["linux-native"]
default-features = false

[target.'cfg(target_os = "windows")'.dependencies.hidapi]
version = "2"

[target.'cfg(target_os = "macos")'.dependencies.hidapi]
version = "2"
